--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -1,10 +1,12 @@
 
 // Breakpoints
 
-$Desktop: 1000px;
+$Tablet: 1000px;
+$Desktop: 1250px;
 
 // Colors
 
+$White: hsl(0, 0%, 100%);
 $Almost-White: hsl(0, 0%, 98%);
 $Medium-Gray: hsl(0, 0%, 41%);
 $Almost-Black: hsl(0, 0%, 8%);
@@ -16,3 +18,6 @@ $Font-Family: 'Epilogue', sans-serif;
 $Font-Normal: 500;
 $Font-Bold: 700;
 
+// Other
+
+$Transition: all 0.3s ease;
